<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/client"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/ip_address" />

            <EditText
                android:id="@+id/editServerIP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="10.0.2.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/port" />

            <EditText
                android:id="@+id/editServerPort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="35999" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/grpClientType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioClientTCP"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/comm_mode" />

            <RadioButton
                android:id="@+id/radioClientTCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TCP" />

            <RadioButton
                android:id="@+id/radioClientUDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UDP" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>